--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -282,6 +282,18 @@ html body {
 
 }
 
+.wrapper>.form-content>.form-item>.input-control {
+    border: 1px solid #f0f0f0;
+    outline: none;
+    display: inline-block;
+    height: 44px;
+    font-size: 16px;
+    vertical-align: middle;
+    width: 100%;
+    padding: 0 18px;
+
+}
+
 .wrapper>.form-content>.form-item>.input-control.input-error {
     border: 1px solid rgb(255, 50, 50);
 
@@ -296,18 +308,23 @@ html body {
     background-repeat: no-repeat;
     background-size: 14px 14px;
     background-position: calc(100% - 3px);
+    color: black;
     background-color: white;
 
 }
 
 .wrapper>.form-content>.form-item>select.input-control>option {
+    color: black;
     background-color: white;
 
 }
 
+.input-min-width-95p {min-width:95%;}
+
 .wrapper>.form-content>.form-item>.input-file-control {
     border: 2px solid #f0f0f0;
     background-color: white;
+    color: black;
     height: 44px;
     font-size: 16px;
     width: 100%;
@@ -621,7 +638,7 @@ html body {
 
 .alert>.loader {
     position: fixed;
-    top: calc(50% - 155px);
+    top: calc(50% - 100px);
     border: 16px solid #f3f3f3;
     /* Light grey */
     border-top: 16px solid #3498db;
