--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -322,13 +322,16 @@ html body {
 .input-min-width-95p {
     padding-right: 1px !important;
     padding-top: 10px;
+    text-transform: inherit;
+    text-decoration: inherit;
+    text-align: inherit;
+    letter-spacing: inherit;
+    color: inherit;
+    background-size: inherit;
+    background-attachment: inherit;
+    background-origin: inherit;
     min-width: 95%;
     min-height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
-    height: 100%;
-    border: none;
 }
 
 .wrapper>.form-content>.form-item>.input-file-control {
@@ -683,7 +686,7 @@ html body {
 
     .wrapper {
         margin: 0;
-        width: 100%;
+        max-width: 100%;
     }
 
     .wrapper>.text>.description {
