--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -323,6 +323,7 @@ html body {
     display: flex !important;
     align-items: center;
     padding-left: 16px !important;
+    padding-right: 0;
 }
 
 .input-min-width-95p {
@@ -335,11 +336,12 @@ html body {
 }
 
 input[type="date"] {
-    display: block;
+    display: inline-block;
+    background-color: white;
+    color: black;
     border: none;
     outline: none;
     box-shadow: 0;
-    padding: 0;
     -webkit-appearance: textfield;
     -moz-appearance: textfield;
 }
