--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -593,6 +593,10 @@ input[type="date"] {
 
 }
 
+.wrapper>.footer>.design>a {
+    color: white;
+    text-decoration: none;
+}
 
 .alert {
     position: fixed;
